Edited wiki page through web user interface.

--- a/wiki/Setup.wiki
+++ b/wiki/Setup.wiki
@@ -1,7 +1,5 @@
 #labels setup,install
-Setup Your Environment
-
-= Introduction =
+= Setup Your Environment =
 
 Instructions on setting up the aws-todo Rails environment.
 
